Finishes payment plans, fixes header nav to be visible, fixes links to the app

--- a/css/style.css
+++ b/css/style.css
@@ -770,3 +770,7 @@ fieldset[disabled] .btn-primary.active {
 .pace-inactive {
   display: none;
 }
+
+a.page-scroll {
+  color: #676a6c !important;
+}
